--- a/src/sass/components/design/design-section.scss
+++ b/src/sass/components/design/design-section.scss
@@ -2,7 +2,7 @@
   position: relative;
   min-height: 850px;
   margin-bottom: 64px;
-  background-image: url(../../../images/unique-design/bg/layer45.jpg);
+  background-image: url(../images/unique-design/bg/layer45.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -10,6 +10,6 @@
   background-blend-mode: soft-light;
 
   @media (min-resolution: 192dpi) {
-    background-image: url(../../../images/unique-design/bg/layer45@2x.jpg);
+    background-image: url(../images/unique-design/bg/layer45@2x.jpg);
   }
 }
