--- a/src/sass/components/header/header.scss
+++ b/src/sass/components/header/header.scss
@@ -6,7 +6,7 @@
       rgba($color-first-gradient, 0.9),
       rgba($color-second-gradient, 0.9)
     ),
-    url(../../../images/bg/layer15-min.jpg);
+    url(../images/bg/layer15-min.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -16,6 +16,6 @@
         rgba($color-first-gradient, 0.9),
         rgba($color-second-gradient, 0.9)
       ),
-      url(../../../images/bg/layer15@2x.jpg);
+      url(../images/bg/layer15@2x.jpg);
   }
 }
