Add people section

--- a/src/sass/components/work/work.scss
+++ b/src/sass/components/work/work.scss
@@ -8,7 +8,7 @@
   &__left-col {
     display: flex;
     flex-wrap: wrap;
-    max-width: 960px;
+    flex-basis: 960px;
   }
 
   &__img-overflow {
