--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -57,3 +57,7 @@
 @import './components/work/work-title.scss';
 @import './components/work/work.scss';
 @import './components/work/work-subtitle.scss';
+
+//people
+@import './components/people/people.scss';
+@import './components/people/people-section.scss';
