--- a/src/sass/components/work/work.scss
+++ b/src/sass/components/work/work.scss
@@ -16,20 +16,20 @@
     overflow: hidden;
   }
 
-  //   &__img-overlay {
-  //     position: absolute;
-  //     left: 0;
-  //     top: 0;
-  //     width: 100%;
-  //     height: 100%;
-  //     background-image: linear-gradient(
-  //       rgba(243, 129, 129, 0.9),
-  //       rgba(252, 227, 138, 0.9)
-  //     );
-  //     visibility: hidden;
-  //     opacity: 0;
-  //     transition: all 0.2s linear;
-  //   }
+  &__img-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+      rgba(243, 129, 129, 0.9),
+      rgba(252, 227, 138, 0.9)
+    );
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.2s linear;
+  }
 
   &__img {
     transition: transform 0.3s linear;
