Add blog section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -61,3 +61,7 @@
 //people
 @import './components/people/people.scss';
 @import './components/people/people-section.scss';
+
+//blog
+@import './components/blog/blog-section.scss';
+@import './components/blog/blog.scss';
