--- a/src/sass/helpers/vars.scss
+++ b/src/sass/helpers/vars.scss
@@ -26,4 +26,5 @@ $color-invalid: #ff0000;
 $color-subscribe-btn: #95e1d3;
 $color-grey-background: #f8f8f8;
 
+//container
 $container-width: 1200px;
