--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -65,3 +65,6 @@
 //blog
 @import './components/blog/blog-section.scss';
 @import './components/blog/blog.scss';
+
+//map
+@import './components/map/map.scss';
