--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -68,3 +68,13 @@
 
 //map
 @import './components/map/map.scss';
+
+//contacts
+@import './components/contacts/contacts.scss';
+@import './components/contacts/contacts-logo.scss';
+@import './components/contacts/contacts-section.scss';
+@import './components/contacts/blog.scss';
+@import './components/contacts/instagram.scss';
+
+//footer
+@import './components/footer/footer.scss';
