--- a/src/sass/components/contacts/instagram.scss
+++ b/src/sass/components/contacts/instagram.scss
@@ -3,15 +3,29 @@
     display: flex;
     flex-wrap: wrap;
     max-width: calc(92px * 3);
+    margin-bottom: 18px;
   }
 
-  &__img {
-    &:not(:nth-child(3n)) {
-      margin-right: 2px;
-    }
+  &__link {
+    font-size: 13px;
+    font-style: italic;
+  }
+}
 
-    &:not(:nth-last-child(-n + 3)) {
-      margin-bottom: 2px;
-    }
+.instagram__img {
+  transition: transform 0.4s linear;
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
+.img__wrap {
+  overflow: hidden;
+  &:not(:nth-child(3n)) {
+    margin-right: 2px;
+  }
+
+  &:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 2px;
   }
 }
