--- a/src/sass/components/header/hero__btn.scss
+++ b/src/sass/components/header/hero__btn.scss
@@ -14,8 +14,64 @@
   transition: all 0.2s linear;
 
   &:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     box-shadow: 1px 1px 8px 2px rgba(0, 0, 0, 0.22);
-    background-color: rgba(148, 0, 0, 0.3);
+    background-color: rgba(255, 0, 0, 0.3);
+  }
+}
+
+.hero__btn:hover,
+.hero__btn:focus {
+  outline: none;
+  border-bottom: 2px solid #eee;
+}
+
+.hero__btn::before,
+.hero__btn:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 110px;
+  height: 110px;
+  border: 12px double rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  content: '';
+  opacity: 0;
+  transform: translateX(-50%) translateY(-50%) scale(0.2);
+}
+
+.hero__btn:after {
+  width: 80px;
+  height: 80px;
+  border-width: 6px;
+  transform: translateX(-50%) translateY(-50%) scale(0.8);
+}
+
+.hero__btn:hover:before,
+.hero__btn:hover:after {
+  animation: pulsate 1.2s infinite;
+}
+
+@-webkit-keyframes pulsate {
+  30% {
+    opacity: 1;
+    -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+  }
+
+  100% {
+    opacity: 0.3;
+    -webkit-transform: translateX(-50%) translateY(-50%) scale(0.5);
+  }
+}
+
+@-keyframes pulsate {
+  30% {
+    opacity: 1;
+    transform: translateX(-50%) translateY(-50%) scale(1);
+  }
+
+  100% {
+    opacity: 0.3;
+    transform: translateX(-50%) translateY(-50%) scale(0.5);
   }
 }
