--- a/src/sass/components/header/hero__btn.scss
+++ b/src/sass/components/header/hero__btn.scss
@@ -55,9 +55,11 @@
 @keyframes pulsate {
   30% {
     opacity: 1;
+    transform: translateX(-50%) translateY(-50%) scale(1);
   }
 
   100% {
     opacity: 0.3;
+    transform: translateX(-50%) translateY(-50%) scale(0.5);
   }
 }
